# manga-ocr

./: .gitignore  PLAN.md  README.md  pyproject.toml
.label-studio-data/: .env
.label-studio-data/export/: project-1-at-2026-03-13-21-57-c0e1432c-info.json  project-1-at-2026-03-13-21-57-c0e1432c.json  project-1-at-2026-03-13-22-02-c0e1432c-info.json
android-sdk/: README.md  build.gradle.kts  settings.gradle.kts
android-sdk/src/main/: AndroidManifest.xml
configs/: teacher_tesseract.json  teacher_yolo26_tesseract.json  train_ocr.yaml
notebooks/: manga_ocr_dataset_prep_colab.ipynb
scripts/: prepare_colab_dataset.py
src/annotation/tasks/: chapter_tasks.json
src/manga_ocr/: __init__.py  cli.py  domain.py  image_utils.py  splits.py  storage.py
src/manga_ocr/annotation/: __init__.py  human_gold.py  label_studio.py
src/manga_ocr/colab/: __init__.py  dataset_prep.py
src/manga_ocr/detection/: __init__.py  yolo_onnx.py
src/manga_ocr/eval/: __init__.py  ocr_eval.py
src/manga_ocr/ingest/: __init__.py  adapters.py  (+2 more)
src/manifests/: dataset_manifest.jsonl  exception_review_decisions.jsonl  human_gold_batch.jsonl  rejected_predictions.jsonl  silver_manifest.jsonl
src/reports/: teacher_eval.json
tests/: test_cli.py  test_colab_dataset_prep.py  test_eval.py  test_exception_review_cli.py  test_human_gold.py  test_human_gold_cli.py  test_ingest.py  test_label_studio.py  test_pseudo_label.py  test_pseudo_label_workflow.py  test_review_by_exception.py  test_splits.py  test_teacher.py  test_tesseract_teacher.py  test_yolo_detector.py  test_yolo_tesseract_teacher.py
(+27 files in other folders)
